--- a/install_files/Dockerfile.nomer
+++ b/install_files/Dockerfile.nomer
@@ -5,7 +5,7 @@ FROM openjdk:8
 #RUN apk --no-cache add sudo curl bash parallel
 RUN apt-get update && apt-get -y install sudo curl bash parallel
 
-RUN sudo sh -c '(echo "#!/usr/bin/env sh" && curl -L https://github.com/globalbioticinteractions/nomer/releases/download/0.2.6/nomer.jar) > /usr/local/bin/nomer && chmod +x /usr/local/bin/nomer'
+RUN sudo sh -c '(echo "#!/usr/bin/env sh" && curl -L https://github.com/globalbioticinteractions/nomer/releases/download/0.2.10/nomer.jar) > /usr/local/bin/nomer && chmod +x /usr/local/bin/nomer' && nomer clean
 
 WORKDIR /
 
