--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -2,6 +2,10 @@ version: '2.1'
 
 services:
 
+    gnparser:
+      #build: https://github.com/gnames/gnparser.git
+      image: gnames/gognparser:latest
+
     yarrrml-parser:
       build: https://github.com/RMLio/yarrrml-parser.git
       image: yarrrml-parser:latest
@@ -95,6 +99,7 @@ services:
         restart: on-failure
         depends_on:
             - postgres
+            - gnparser
             - yarrrml-parser
             - rmlmapper
             - nomer
@@ -117,7 +122,7 @@ services:
         volumes:
             - ${INTEGRAPH__CONFIG__HOST_CONFIG_DIR}:/opt/airflow/config
             - ${PWD}:/opt/airflow/dags
-            - ${HOME}/.integraph/logs:/opt/airflow/logs
+            - ${INTEGRAPH__CONFIG__AIRFLOW_LOGS_DIR}:/opt/airflow/logs
             - /var/run/docker.sock:/var/run/docker.sock
             - /usr/bin/docker:/usr/bin/docker
             - /tmp:/tmp
