--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 logo: /images/integraph-logo.png
-title:
+title: " "
 description: A semantic data integration toolbox for biodiversity sciences.
 show_downloads: true
