--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -1,22 +1,21 @@
-# apache-airflow==2.5.3
-confection==0.0.4
-docker==6.0.1
-numpy==1.24.2
+confection
+docker
+numpy
 cerberus
-text2term==2.2.0
-pandas==1.5.3
-pendulum==2.1.2
-pytest==7.2.2
-pyunpack==0.3
-PyYAML==6.0
-rdflib==6.3.2
-requests==2.28.2
-requests_file==1.5.1
-validators==0.20.0
-psycopg2-binary==2.9.6
-sqlalchemy==1.4.46
-mapeathor==1.6.1
-morph-kgc==2.4.0
+text2term==4.2.0
+pandas
+pendulum
+pytest
+pyunpack
+PyYAML
+rdflib
+requests
+requests_file
+validators
+psycopg2-binary
+sqlalchemy
+mapeathor
+morph-kgc
 patool
 xlrd
 beautifulsoup4
