--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@
 # The following variables are supported:
 #
 # AIRFLOW_IMAGE_NAME           - Docker image name used to run Airflow.
-#                                Default: apache/airflow:2.9.2
+#                                Default: apache/airflow:2.10.2
 # AIRFLOW_UID                  - User ID in Airflow containers
 #                                Default: 50000
 # AIRFLOW_PROJ_DIR             - Base path to which all the files will be volumed.
@@ -48,11 +48,10 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-
-  # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2}
+  #image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.10.2}
   &airflow-common
   build:
-    context: ${INTEGRAPH__INSTALL__INSTALL_DIR}
+    context: ${INTEGRAPH_INSTALL_DIR}
     dockerfile: Dockerfile.airflow
     args:
       - DOCKER_UID=${AIRFLOW_UID}
@@ -78,20 +77,9 @@ x-airflow-common:
     # The following line can be used to set a custom config file, stored in the local config folder
     # If you want to use it, outcomment it and replace airflow.cfg with the name of your config file
     # AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
-    INTEGRAPH__EXEC__TEST_MODE: ${INTEGRAPH__EXEC__TEST_MODE}
-    INTEGRAPH__CONFIG__CACHE_DIR: ${INTEGRAPH__CONFIG__CACHE_DIR}
-    INTEGRAPH__CONFIG__NOMER_CACHE_DIR: ${INTEGRAPH__CONFIG__NOMER_CACHE_DIR}
-    INTEGRAPH__CONFIG__AIRFLOW_LOGS_DIR: ${INTEGRAPH__CONFIG__AIRFLOW_LOGS_DIR}
   volumes:
-    # - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
-    - ${PWD}:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
-    # - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
-    # - ${INTEGRAPH__CONFIG__HOST_CONFIG_DIR}:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ${AIRFLOW_PROJ_DIR:-.}/tmp:/tmp
-    - /var/run/docker.sock:/var/run/docker.sock
-    - /usr/bin/docker:/usr/bin/docker
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on: &airflow-common-depends-on
     redis:
@@ -160,8 +148,16 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    environment:
+      <<: *airflow-common-env
+      INTEGRAPH_TEST_MODE: ${INTEGRAPH_TEST_MODE:-False}
+      INTEGRAPH_NOMER_CACHE_DIR: ${INTEGRAPH_NOMER_CACHE_DIR:-.}
     volumes:
-      - ${INTEGRAPH__CONFIG__HOST_CONFIG_DIR}:/opt/airflow/config
+      - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+      - ${INTEGRAPH_ROOT_DIR:-.}:/opt/airflow/dags
+      - ${INTEGRAPH_GRAPH_CONFIG_DIR:-.}:/opt/airflow/graph-config
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/bin/docker:/usr/bin/docker
 
   airflow-worker:
     <<: *airflow-common
@@ -200,12 +196,6 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-
-  airflow-reset:
-    <<: *airflow-common
-    command: db reset -y
-    # depends_on:
-    #   <<: *airflow-common-depends-on
 
   airflow-init:
     <<: *airflow-common
@@ -284,6 +274,10 @@ services:
       - -c
       - airflow
 
+  airflow-reset:
+    <<: *airflow-common
+    command: db reset -y
+
   # You can enable flower by adding "--profile flower" option e.g. docker-compose --profile flower up
   # or by explicitly targeted on the command line e.g. docker-compose up flower.
   # See: https://docs.docker.com/compose/profiles/
@@ -308,7 +302,7 @@ services:
 
   nomer:
     build:
-      context: ${INTEGRAPH__INSTALL__INSTALL_DIR}
+      context: ${INTEGRAPH_INSTALL_DIR}
       dockerfile: Dockerfile.nomer
     image: nomer:latest
 
