--- a/install/Dockerfile.airflow
+++ b/install/Dockerfile.airflow
@@ -1,11 +1,10 @@
-FROM apache/airflow:latest-python3.10
-#2.5.3-python3.10
+FROM apache/airflow:2.10.2
+#apache/airflow:latest-python3.10
 
 USER root
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-    git \
+    && apt-get install -y --no-install-recommends git vim \
     && apt-get autoremove -yqq --purge \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
