--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,7 @@ x-airflow-common:
   #image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.10.2}
   &airflow-common
   build:
-    context: ${INTEGRAPH_INSTALL_DIR}
+    context: ${INTEGRAPH_DOCKER_DIR}
     dockerfile: Dockerfile.airflow
     args:
       - DOCKER_UID=${AIRFLOW_UID}
@@ -302,7 +302,7 @@ services:
 
   nomer:
     build:
-      context: ${INTEGRAPH_INSTALL_DIR}
+      context: ${INTEGRAPH_DOCKER_DIR}
       dockerfile: Dockerfile.nomer
     image: nomer:latest
 
